<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_heading_imu</name>
  <version>0.0.0</version>
  <description>Convert ublox moving-baseline GPS heading (UBXNavRelPosNED) into a
  standard sensor_msgs/Imu on /rover/imu for robot_localization.</description>
  <maintainer email="tejaswi.arun@gmail.com">tejaswi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ublox_ubx_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
